fix search on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -310,6 +310,9 @@ body {
     margin-top: 0;
     margin-bottom: 0;
   }
+  .searchArea {
+    width: auto;
+  }
 }
 
 /* search results page */
